# imk-toolkit

./: .gitattributes  .gitignore  CHANGELOG.md  CONTRIBUTING.md  Dockerfile  LICENSE  Makefile  README.md  REPRODUCEME.md  docker-compose.override.yaml  docker-compose.yaml  env.example  pyproject.toml
.github/ISSUE_TEMPLATE/: bug_report.md
.github/workflows/: build-and-push-docker-image.yml  build-and-push-pypi.yml  build-matrix.yml  create-github-release.yml  create-release.yml  create-test-release.yml  static-analysis.yml  static-testing.yml
cicd-workflows/: build-and-push-docker-images.sh  build-and-push-pypi.sh
code/: Dockerfile  README.md  app.py  pyproject.toml
code/imktk/: README.md  __init__.py  cli.py  toolkit.py
code/imktk/dataarray_methods/: anomalies.py
env/: .env.example
imktk/: README.md  __init__.py  pyproject.toml  toolkit.py  tutorial.py
imktk/constants/: __init__.py  _constants.py  _custom_defined.py
imktk/dataarray_methods/: ad_temp.py  anomalies.py  climatology.py  double_the_fun.py  flight_track.py  nd.py  normalise.py  normalize.py  num_den.py  scattered_interp.py  vapour_pres_ice.py  vapour_pres_liq.py
imktk/dataset_methods/: _template.py
imktk/datasets/: __init__.py  _datasets.py
imktk/imktk/: README.md  __init__.py  toolkit.py
imktk/imktk/dataarray_methods/: ancistrus.ipynb  anomalies.py  read_ancistrus.py
tests/: README.md  __init__.py  __test_template.py  conftest.py  test_anomalies.py
tests/dataarray_tests/: _template.py  test_climatology.py
tests/dataarrays_data/: __init__.py
tests/dataset_tests/: _template.py
tests/datasets_data/: __init__.py
