[tool.poetry]
name = "imktk"
version = "0.1.8-rc.2"
description = "Toolkit provided by IMK at KIT"
license = "MIT"
authors = [
    "Uğur Çayoğlu <Ugur.Cayoglu@kit.edu>",
]
readme = "README.md"
homepage = "https://github.com/imk-toolkit/imk-toolkit"
repository = "https://github.com/imk-toolkit/imk-toolkit"
documentation = "https://github.com/imk-toolkit/imk-toolkit"
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Topic :: Scientific/Engineering",
    "Topic :: Scientific/Engineering :: Atmospheric Science",
    "Programming Language :: Python",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.7",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
]

[tool.poetry.dependencies]
python = "^3.7, <3.10"
xarray = "^0.20.1"
netCDF4 = "^1.5.8"

[tool.poetry.dev-dependencies]
pytest = "^3.4"
black = "^21.9b0"
pooch = "^1.5.2"
flake8 = "^4.0.1"

[tool.poetry.scripts]
imktk = "imktk:main"

[tool.black]
line-length = 140
target-version = ['py37']

[build-system]
requires = ["poetry_core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
