[tool.poetry]
name = "imktk"
version = "0.2.1"
description = "Toolkit provided by IMK at KIT"
license = "MIT"
authors = [
    "Uğur Çayoğlu <Ugur.Cayoglu@kit.edu>",
]
readme = "README.md"
homepage = "https://github.com/imk-toolkit/imk-toolkit"
repository = "https://github.com/imk-toolkit/imk-toolkit"
documentation = "https://github.com/imk-toolkit/imk-toolkit"
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Topic :: Scientific/Engineering",
    "Topic :: Scientific/Engineering :: Atmospheric Science",
    "Programming Language :: Python",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
]

[tool.poetry.dependencies]
python = "^3.8, <3.11"
xarray = "^0.20.1"
netCDF4 = "^1.5.8"

[tool.poetry.dev-dependencies]
pytest = "^3.4"
black = "^22.6.0"
flake8 = "^4.0.1"

[tool.poetry.scripts]
imktk = "imktk:main"

[tool.black]
line-length = 140
target-version = ['py38']

[build-system]
requires = ["poetry_core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
