[tool.poetry]
name = "imktk"
version = "0.1.4"
description = "Toolkit provided by IMK at KIT"
authors = [
    "Uğur Çayoğlu <cayoglu@me.com>",
]

[tool.poetry.dependencies]
python = "^3.7"
xarray = "^0.20.1"
netCDF4 = "^1.5.8"

[tool.poetry.dev-dependencies]
pytest = "^3.4"
black = "^21.9b0"
pooch = "^1.5.2"
flake8 = "^4.0.1"

[tool.poetry.scripts]
imktk = "imktk:main"

[tool.black]
line-length = 140
target-version = ['py37']
